Remove old backend.

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Callboard",
+  "name": "callboard",
   "version": "1.0.0",
   "description": "Some project",
   "author": "Ismail, Oleksii",
